# sync-grpc-client

./: Cargo.toml
src/: client.rs  common.rs  lib.rs  server.rs
tests/: integration_tests.rs
