[package]
name = "sync-grpc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.10.2"
paste = "1.0.14"
tokio-util = "0.7.10"
prost = "0.12"
tokio = { version = "1.35.0", features = ["full"] }
futures = "0.3.29"
console-subscriber = "0.2.0"
